Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37890

Pixmap cache profiling events are inconsistent

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 5.3.0 Beta1
    • Quick: Other
    • None
    • 964dcdfb7bc106696b4be12b7f71ba52f8448973

      a, A QQuickPixmapReply isn't reported if it's canceled after the reply has been received but before it is processed by QQuickPixmapReply::event. That means for some pixmaps we profile a PixmapLoadingStarted but no PixmapLoadingFinished or PixmapLoadingError. The profiler will then erroneously assume that the picture never finished loading.

      b, The cache counts are reported before they are updated in certain cases and after they are updated in others. This makes it hard to figure out if a certain picture was cached or rather uncached.

      c, The request or implicit sizes are reported instead of the size actually stored in memory. In most of the cases those are the same, but if a sourceSize attribute is given they may differ.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes