Make profiling of pixmap cache events more consistent

Previously canceled replies weren't reported, the cache count was
reported before it was updated, and the request or implicit sizes
were reported instead of the size actually stored in memory.

Task-number: QTBUG-37890
Change-Id: I9d9d9f6b9bfa75c7d56b778fc8174bda4e842d72
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>